--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <header class="section__container header__container" id="about">
     <div class="header__image">
-        <img src="images/Design_sans_titre-removebg-preview.png" alt="header">
+        <img src="Design_sans_titre-removebg-preview.png" alt="header">
 
     </div>
     <div class="header__content">
@@ -67,7 +67,7 @@
     <div >
       <section class="section__two__container header__two__container" id="about">
         <div class="about__image">
-          <img src="images/The No_ 1 Reason I'm Buying More of These 2 Stock-Split Stocks - The Motley Fool.jpg" alt="">
+          <img src="The No_ 1 Reason I'm Buying More of These 2 Stock-Split Stocks - The Motley Fool.jpg" alt="">
         </div>
         <div class="header__content">
           <p class="section__description"> Je suis développeuse frontend et designer passionnée par la création d'interfaces utilisateur intuitives et esthétiques. Avec une expertise en HTML, CSS, JavaScript et une sensibilité artistique aiguisée, je transforme des idées en expériences numériques engageantes. Mon objectif est de combiner créativité et technologie pour concevoir des sites web à la fois fonctionnels et visuellement captivants.e suis développeuse frontend et designer passionnée par la création d'interfaces utilisateur intuitives et esthétiques. Avec une expertise en HTML, CSS, JavaScript et une sensibilité artistique aiguisée, je transforme des idées en expériences numériques engageantes. Mon objectif est de combiner créativité et technologie pour concevoir des sites web à la fois fonctionnels et visuellement captivants.</p>
